horizontal scroll fix

--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -34,20 +34,18 @@
 
 @media screen and (max-width: 1050px) {
   .cover__overlay {
-    height: 640px;
+    max-height: 640px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .cover__overlay {
-    height: 480px;
-    margin: 90px auto 0;
+    max-height: 480px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .cover__overlay {
-    height: 200px;
-    margin: 66px auto 0;
+    max-height: 200px;
   }
 }
