--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -3,4 +3,17 @@
   max-width: 1184px;
   padding: 92px 0 0;
   margin: 0 auto;
+  object-fit: cover;
+}
+
+@media screen and (max-width: 768px) {
+  .cover {
+    padding: 90px 0 0;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .cover {
+    padding: 66px 0 0;
+  }
 }
