--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -29,7 +29,7 @@
 @media screen and (max-width: 590px) {
   .photo-grid {
     width: calc(100% - 32px);
-    padding: 64px 16px;
+    padding: 64px 16px 0;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(12, 1fr);
   }
