--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -24,19 +24,10 @@
 
 @media screen and (max-width: 768px) {
   .place {
-    grid-template-columns: minmax(288px, 340px) minmax(288px, 352px);
-    grid-column-gap: 28px;
-    padding-top: 73px;
-
-  }
-}
-
-
-@media screen and (max-width: 590px) {
-  .place {
-    grid-template-columns: 1fr;
-    grid-column-gap: 24px;
+    grid: 600px auto / 1fr;
+    grid-template-rows: 1fr;
+    padding-left: 0;
+    padding-top: 64px;
     grid-row-gap: 32px;
-    padding-top: 50px;
   }
 }
