--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -4,15 +4,16 @@
   margin: auto;
 }
 
-@media screen and (max-width: 1280px) {
+/* @media screen and (max-width: 1280px) {
   .places {
     padding: 88px 48px 0;
     margin: auto;
   }
-}
+} */
 
 @media screen and (max-width: 1080px) {
   .places {
+    max-width: 928px;
     padding: 92px 24px 0;
     margin: auto;
   }
@@ -20,6 +21,7 @@
 
 @media screen and (max-width: 768px) {
   .places {
+    max-width: 720px;
     padding: 64px 16px 0;
     margin: auto;
   }
